--- a/css/cv.css
+++ b/css/cv.css
@@ -78,7 +78,7 @@ h1,
 h2,
 h3 {
   line-height: 1.1;
-  margin: 0;
+  margin: 10px;
 }
 h1 {
   font-size: var(--fs-h1);
@@ -89,7 +89,9 @@ h2 {
 h3 {
   font-size: var(--fs-h3);
 }
-
+p {
+  margin: 0 auto;
+}
 .section__title {
   margin-bottom: 1rem;
 }
@@ -98,6 +100,7 @@ h3 {
 }
 .section__title--intro {
   text-align: center;
+  padding-left: 0.5em;
 }
 .section__subtitle {
   margin: 0;
@@ -254,7 +257,7 @@ h3 {
     padding-right: 4em;
     position: relative;
     left: -1.5em;
-    width: calc(100% + 1.5em);
+    width: calc(100% + 7em);
     font-size: 1.5em;
     text-align: right;
   }
@@ -276,7 +279,7 @@ h3 {
   text-align: center;
 }
 .section__title--services {
-  color: #222105;
+  color: #1c1c12;
   position: relative;
 }
 
@@ -297,12 +300,13 @@ h3 {
   margin-bottom: 3em;
 }
 .service {
-  max-width: 300px;
+  max-width: 600px;
   margin-right: 0 auto;
   color: #25211afd;
   font-size: 20px;
-  background-color: #e9f5db;
-  text-align: left;
+  background-color: #e9f5dbb9;
+  text-align: justify;
+  padding-right: 1em;
 }
 @media (min-width: 800px) {
   .services {
@@ -311,7 +315,7 @@ h3 {
     margin-left: auto;
     margin-right: auto;
   }
-  .service + .service {
+  .service {
     margin-left: 2em;
   }
 }
@@ -319,9 +323,12 @@ h3 {
 .about-me {
   max-width: 1000px;
   margin: 0 auto;
+  padding: 50px;
 }
+
 .about-me__img {
   box-shadow: 0.25em 0.25em 0.75em rgba(11, 12, 11, 0.25);
+  margin-top: 110px;
 }
 @media (min-width: 600px) {
   .about-me {
@@ -349,6 +356,9 @@ h3 {
     grid-area: img;
     position: relative;
     z-index: 2;
+  }
+  .service {
+    max-width: 300px;
   }
 }
 
@@ -429,4 +439,7 @@ h3 {
 
 .social_list__link {
   padding: 0.5em;
+}
+.about-me__body {
+  text-align: justify;
 }
